{
    "name": "TestInputAction",
    "maps": [
        {
            "name": "Test",
            "id": "a16bbcab-be23-4d8b-8db0-69685732d36e",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "79860494-accd-4fdb-8d94-8ba5d990b3b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "7d9df4d5-4b33-4e43-ac51-c43bd0a978bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed419c28-cf2c-472c-b271-ea2f82c7c098",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49528872-a844-4a06-8d58-db69b19d0e43",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}